--- a/templates/edt/horas.html
+++ b/templates/edt/horas.html
@@ -5,7 +5,7 @@
 
 <div ><h4>Resumen de horas solicitadas</h4>
 	
-		<table class="table table-bordered table-hover " >
+		<table class="table table-bordered table-hover navbar-fixed-top" >
 			<thead>
 			    <tr>
 			      <th>Funcionario</th>
