--- a/templates/edt/main.html
+++ b/templates/edt/main.html
@@ -147,7 +147,7 @@
 		</div>		
 
 	</div>
-		
+	<div class="alert alert-warning">IMPORTANTE : La anulación de un permiso solo se efectua a través de su jefatura directa, quien debera solicitarla a RRHH.</div>	
 	<div id='calendar'></div>
 		<input type="hidden" id="calendario-data" name="data-calendario">
 
