--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -1095,6 +1095,7 @@ h4,
 h5,
 .h5 {
   font-size: 15px;
+  color: #000000;
 }
 h6,
 .h6 {
@@ -3921,7 +3922,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: fixed;
   right: 0;
   left: 0;
-  z-index: 1030;
+  z-index: 3; /* original era 1030*/
 }
 @media (min-width: 768px) {
   .navbar-fixed-top,
