--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,11 @@
-body{
-				margin:0px;
-				padding:0px;
-				background:rgb(255,255,255);
+body{margin:0px;
+	 padding:0px;
+	 background:rgb(255,255,255);
+	}
+footer a {
+	color: #000000;
 
-			}
+}
 #contenedor{
 				width:100%;				
 				background:rgb(250,250,250);
@@ -92,7 +94,7 @@ input[type='text'] , input[type='password'],textarea {
 	background-color: #3498DB;
 }
 
-input:hover, textarea:hover,
+input:hover, textare|hover,
 input:focus, textarea:focus {
 	border-color: 1px solid #C9C9C9;
 	box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 8px;
@@ -100,7 +102,7 @@ input:focus, textarea:focus {
 	-webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 8px;	
 }
 .permiso  {
-		float: left;
+		/*float: left;*/
 		overflow: hidden; 
 		margin-top: 15px;
 		margin-bottom: 5px;
@@ -642,11 +644,20 @@ padding: 5px 5px 5px 25px;
 	width: 200px;
 }
 .anulado{
-	background-color: MediumPurple;
-	color: white;	
+	background-color: #FFB3B3 !important;
+	color: black;
 }
 .anulado:hover {
-	background-color: MediumPurple;
+	background-color: #CC6699 !important;
+	color: black;
+}
+
+.sinrevisar{
+	background-color: #9BDAF7 !important;
+	color: black;
+}
+.sinrevisar:hover{
+	background-color: #9BDAF7 !important;
 	color: black;
 }
 
@@ -790,6 +801,7 @@ padding: 5px 5px 5px 25px;
   overflow: hidden;
   float: left; 
   border-collapse:collapse;
+  font-size: 12px;
 }
 .DEVtable caption {
 	font-size: 18px;
@@ -872,6 +884,9 @@ padding: 5px 5px 5px 25px;
 .fechasfiltro{
 	margin: auto;
 	width: 650px;
+}
+.fechasfiltro h4{
+	text-transform: lowercase;
 }
 
 .badgerojo{
@@ -989,6 +1004,19 @@ padding: 5px 5px 5px 25px;
 	margin-right: 15px;
 
 }
+.funcionario {
+	display: block;	
+	font-weight: normal;
+}
+.funcionario a{
+	text-decoration: none !important;
+	color: #000000;
+}
+.funcionario:hover{
+	background-color: yellow;
+
+}
+
 .fpermiso{
 	margin-right: 15px;
 
@@ -1039,8 +1067,32 @@ padding: 5px 5px 5px 25px;
 
 }
 .listapermisos{
+	display: none;
 	padding: 5px;
 	border : 2px solid black;
 	overflow: hidden;
 	width: 100%;
+}
+.informe{
+	font-size: 11px;
+}
+.ComentarioInforme{
+	width: 250px;
+	max-width: 250px;	
+}
+.correlativo{
+	width: 40px;
+	max-width: 40px;
+}
+.centrado{
+	text-align: center;
+}
+.documentoadjunto {
+	display: block;	
+	font-weight: normal;
+}
+.documentoadjunto a{
+	text-decoration: none !important;
+	color: #000000;
+	padding: 5px;	
 }
