--- a/templates/edt/comprobante.html
+++ b/templates/edt/comprobante.html
@@ -26,7 +26,9 @@
 		{{eventoObj.numero_evento.start|date:"D d M "}}{{"   "}}{{eventoObj.numero_evento.start|date:"G:i"}}{{"-"}} {{eventoObj.numero_evento.end|date:"G:i"}}</li>
 	{% endfor %}
 	<li class="list-group-item" >
-	<span class="badge">Total{{"  "}}{{permiso.horas_solicitadas}}</span>
+	<span class="badge">{% if permiso.usuario.jefatura.id == 1 or permiso.usuario.jefatura.id == 6 or permiso.usuario.jefatura.id == 7 %}Total{{"  "}}{{permiso.horas_solicitadas}} {% else %}
+							   Total{{"  "}}{{permiso.horas_solicitadas}}{{"  Bloques Solicitados"}} 
+				        {% endif %}</span>
 	</li>
 </ul>
 
