--- a/templates/edt/verpermisousuario.html
+++ b/templates/edt/verpermisousuario.html
@@ -38,7 +38,9 @@
 	</li>
 	{% endfor %}
 	<li class="list-group-item" >
-	<span class="badge">Total{{"  "}}{{permiso.horas_solicitadas}}</span>
+	<span class="badge">{% if permiso.usuario.jefatura.id == 1 or permiso.usuario.jefatura.id == 6 or permiso.usuario.jefatura.id == 7 %} Total{{"  "}}{{permiso.horas_solicitadas}} {% else %}
+							   Total{{"  "}}{{permiso.horas_solicitadas}}{{"  Bloques Solicitados"}} 
+				        {% endif %}</span>
 	</li>
 </ul>
 </div>
