automatizacion de cambio de TZ para los 01 de noviembre

--- a/templates/edt/estadisticapermisosPDF.html
+++ b/templates/edt/estadisticapermisosPDF.html
@@ -48,7 +48,7 @@
 
 <div id="footer_content">(c) - página <pdf:pagenumber> of <pdf:pagecount> </div>
 <h4 align="center">Estadistica de permisos</h4>
-<h4 align="center">{{hoy|date:"d F Y"}}</h4>
+<h4 align="center">{{hoy|date:"d-m-Y"}}</h4>
 <div id="header_content">{% if start %} Periodo comprendido entre {{inicio|date:"d F Y"}} y {{termino|date:"d F Y"}} {% endif %} </br></div>
 
 {% if permisos %}
