validacion de permiso sin devolucion de horas y despliegue de anulados

--- a/templates/edt/base.html
+++ b/templates/edt/base.html
@@ -72,6 +72,7 @@
 								  <li class="hvr-underline-from-center page-scroll"><a href="/anularlst/">Anular permisos</a></li>
 								  <li class="hvr-underline-from-center page-scroll"><a href="/devolver">Devolución de Horas</a></li>
 								  <li class="hvr-underline-from-center page-scroll"><a href="/descontar">Descuento de Horas</a></li>
+								  <li class="hvr-underline-from-center page-scroll"><a href="/anulados">Permisos Anulados</a></li>
 								  {% endif %}	
 								</ul>
 				      </li>
