--- a/templates/edt/main.html
+++ b/templates/edt/main.html
@@ -257,7 +257,7 @@ $(document).ready(function(){
 			}
 				//console.log(event.start);
 				var ordenado = seleccionados.sort();//ordeno el arreglo para su correcto guadado
-				console.log(seleccionados);
+				console.log(ordenado);
 			// }	//fin comprobacion de 48 horas	
 								}, // end fullcalendar       						 		
 		
@@ -275,13 +275,18 @@ $(document).ready(function(){
 			alert("Debe seleccionar al menos un bloque de su horario");
 			e.preventDefault();
 		}
+  });  
+    
+  $('#main').submit(function(e){
+	   if( $('#id_devuelve_horas').val() == "N" && $('#id_sueldo').val() == "C" ){
+        alert("Permiso SIN DEVOLUCIÓN de horas debe ser SIN GOCE de sueldo");
+              e.preventDefault(e);
+            }
+     $("#calendario-data").val(JSON.stringify(seleccionados));       
+  });          
 
-		
-		$("#calendario-data").val(JSON.stringify(seleccionados));
 
-		//
-		//e.preventDefault();
-	});
+
 });
 </script>   
 {% endblock  %}
