--- a/templates/edt/permiso_jefatura.html
+++ b/templates/edt/permiso_jefatura.html
@@ -18,7 +18,7 @@
             </select>
           </li>
           <li class="botfiltro">
-            <input class=" btn btn-success" type="submit" value="Cargar Horario" id="filtrar" name="filtrar" />
+            <input class=" btn btn-success" type="submit" value="filtrar" id="filtrar" name="filtrar" />
             <input class=" btn btn-danger" type="submit" value="Limpiar" id="limpiar" name="limpiar" />
           </li>
         </ul>
@@ -177,15 +177,21 @@ $(document).ready(function(){
     if(seleccionados.length == 0){
       alert("Debe seleccionar al menos un bloque de su horario");
       e.preventDefault();
-    }
-
+      }
+    });
     
+  $('#main').submit(function(e){
+    if( $('#id_devuelve_horas').val() == "N" && $('#id_sueldo').val() == "C" ){
+      alert("Permiso SIN DEVOLUCIÓN de horas debe ser SIN GOCE de sueldo");
+      e.preventDefault(e);
+     }
     $("#calendario-data").val(JSON.stringify(seleccionados));
     $("#persona-data").val(personadata);
-
-    //
-    //e.preventDefault();
   });
+
+   
+  
+  
 });
 </script>   
 {% endblock  %}
