--- a/templates/edt/email_jefatura.html
+++ b/templates/edt/email_jefatura.html
@@ -43,17 +43,17 @@
 		<li style="position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;">Reemplazante :  {{ap_reemplazante}} {{nom_reemplazante}}</li>
 		
 	</ul>
- <ul style=" margin-bottom: 20px;padding-left: 0;list-style-type: none;">
+<!--  <ul style=" margin-bottom: 20px;padding-left: 0;list-style-type: none;">
 	<li style="border-radius: 4px;background-color: #556270;border-color: #2c3e50;color: #ffffff;z-index: 2;padding: 5px;"><p style="color: #ffffff; font-size: 16px; padding: 10px 5px 10px 5px; font-weight:normal;">Detalle </p></li>
 	{% for evento in permiso.eventos_en_permisos_set.all %}	
 
 	<li style="position: relative;  display: block;  padding: 10px 15px;  margin-bottom: -1px;  background-color: #ffffff;  border: 1px solid #ecf0f1;" >
-	{{evento.numero_evento.start|date:"D d M "}}{{"   "}}{{evento.numero_evento.start|timezone:"America/Caracas"|date:"G:i"}}{{"-"}} {{evento.numero_evento.end|timezone:"America/Caracas"|date:"G:i"}} <!--para el cambio de hora borrar o modificar el timezone  |timezone:"America/Sao_Paulo"  --> </li>
+	{{evento.numero_evento.start|date:"D d M "}}{{"   "}}{{evento.numero_evento.start|date:"G:i"}}{{"-"}} {{evento.numero_evento.end|date:"G:i"}} </li>
 	{% endfor %}
 	<li class="list-group-item" >
 	<span style="display: inline-block;  min-width: 10px;  padding: 3px 7px;  font-size: 13px;  font-weight: bold;  color: #ffffff;  line-height: 1;  vertical-align: baseline; white-space: nowrap;  text-align: center;  background-color: #2c3e50;  border-radius: 10px;">Total{{"  "}}{{horas}}</span>
 	</li>
-</ul>
+</ul> -->
 <div><a href="http://cal.cdegaulle.cl/verpermiso/{{permiso.id}}" style="padding: 10px 5px 10px 5px; text-align: center; background-color: #ff6b6b; border-radius: 4px;color: #ffffff; text-decoration: none; display: block; text-transform: uppercase;width: 250px;">Revisar permiso</a></div>
 	</div>
 
